[package]
name = "rand_distr"
version = "0.2.1"
authors = ["The Rand Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://rust-random.github.io/rand/rand_distr/"
homepage = "https://crates.io/crates/rand_distr"
description = """
Sampling from random number distributions
"""
keywords = ["random", "rng", "distribution", "probability"]
categories = ["algorithms"]
edition = "2018"

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
rand = { path = "..", version = ">=0.5, <=0.7" }
sgx_tstd = { version = "1.0", rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[dev-dependencies]
rand_pcg = { version = "0.2", path = "../rand_pcg" }
# Histogram implementation for testing uniformity
average = "0.9.2"
